DEF213.2, 227, 231: revert ion-footer width to 8em, but also override the font-family for event-details' pop-up button so that labels are not clipped. These changes are intended to fix issues with iPhone 6 and 7 and zoomed display

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -198,7 +198,7 @@ ion-footer {
 }
 
 ion-footer button {
-    width: 10em;
+    width: 8em;
 }
 
 .toolbar-title {
