--- a/src/pages/events/eventdetail-popup.scss
+++ b/src/pages/events/eventdetail-popup.scss
@@ -23,3 +23,7 @@ position:absolute;
     overflow:hidden;
   
 }
+
+.popover-ios, .button-small-ios {
+   font-family: inherit;
+} 
